force-app/main/default/objects/DefaultFeedTemplate__c/DefaultFeedTemplate__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>デフォルトChatterテンプレート</label>
</CustomObject>