force-app/main/default/objects/DefaultFeedTemplate__c/fields/AdjustmentConditions__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentConditions__c</fullName>
    <label>新規_条件調整</label>
    <type>TextArea</type>
</CustomField>