force-app/main/default/objects/DefaultFeedTemplate__c/fields/AdjustmentContactCancelToAgency__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentContactCancelToAgency__c</fullName>
    <label>解約申入 関係者と調整(不動産)</label>
    <type>TextArea</type>
</CustomField>