force-app/main/default/objects/DefaultFeedTemplate__c/fields/AdjustmentContactRenewalToAgency__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentContactRenewalToAgency__c</fullName>
    <label>更新 調整連絡(不動産)</label>
    <type>TextArea</type>
</CustomField>