force-app/main/default/objects/DefaultFeedTemplate__c/fields/ApplicationContentAdjustmentUpdate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationContentAdjustmentUpdate__c</fullName>
    <label>斡旋_申請内容調整/更新</label>
    <type>TextArea</type>
</CustomField>