force-app/main/default/objects/DefaultFeedTemplate__c/fields/ApplicationReminder__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReminder__c</fullName>
    <label>入替(退去)_申請督促</label>
    <type>TextArea</type>
</CustomField>