force-app/main/default/objects/DefaultFeedTemplate__c/fields/ApprovalContactConditionChange__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactConditionChange__c</fullName>
    <label>条件変更_承認後連絡</label>
    <type>TextArea</type>
</CustomField>