force-app/main/default/objects/DefaultFeedTemplate__c/fields/ApprovalContactNM__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactNM__c</fullName>
    <label>新規_承認後連絡（新規/不動産/通常）</label>
    <type>TextArea</type>
</CustomField>