force-app/main/default/objects/DefaultFeedTemplate__c/fields/ApprovalContactNMContractorChange__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactNMContractorChange__c</fullName>
    <label>新規_承認後連絡（新規/不動産/名変）</label>
    <type>TextArea</type>
</CustomField>