force-app/main/default/objects/DefaultFeedTemplate__c/fields/ApprovalContactNMParking__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactNMParking__c</fullName>
    <label>新規_承認後連絡（新規/不動産/駐車場）</label>
    <type>TextArea</type>
</CustomField>