force-app/main/default/objects/DefaultFeedTemplate__c/fields/ApprovalProxyContactNM__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProxyContactNM__c</fullName>
    <label>新規_承認後連絡（新規/社員/通常）</label>
    <type>TextArea</type>
</CustomField>