force-app/main/default/objects/DefaultFeedTemplate__c/fields/ApprovalProxyContactNMContractorChange__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProxyContactNMContractorChange__c</fullName>
    <label>新規_承認後連絡（新規/社員/名変）</label>
    <type>TextArea</type>
</CustomField>