force-app/main/default/objects/DefaultFeedTemplate__c/fields/ApprovalProxyContactNMParking__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProxyContactNMParking__c</fullName>
    <label>新規_承認後連絡（新規/社員/駐車場）</label>
    <type>TextArea</type>
</CustomField>