force-app/main/default/objects/DefaultFeedTemplate__c/fields/AtLeaveCheckListSend__c.field-meta.xml
<CustomField>
    <fullName>AtLeaveCheckListSend__c</fullName>
    <label>入替(退去)_退去時チェックリスト送付</label>
    <type>TextArea</type>
</CustomField>