force-app/main/default/objects/DefaultFeedTemplate__c/fields/AutoSendLeaveGuidance__c.field-meta.xml
<CustomField>
    <fullName>AutoSendLeaveGuidance__c</fullName>
    <label>解約申入 退去案内</label>
    <type>TextArea</type>
</CustomField>