force-app/main/default/objects/DefaultFeedTemplate__c/fields/CancelCalculateNone__c.field-meta.xml
<CustomField>
    <fullName>CancelCalculateNone__c</fullName>
    <label>解約精算_0円精算</label>
    <type>TextArea</type>
</CustomField>