force-app/main/default/objects/DefaultFeedTemplate__c/fields/ChangeAdjustmentAgency__c.field-meta.xml
<CustomField>
    <fullName>ChangeAdjustmentAgency__c</fullName>
    <label>条件変更_変更内容調整（不動産向け）</label>
    <type>TextArea</type>
</CustomField>