force-app/main/default/objects/DefaultFeedTemplate__c/fields/ChangeFeasibilityConfirm__c.field-meta.xml
<CustomField>
    <fullName>ChangeFeasibilityConfirm__c</fullName>
    <label>入替(退去)_入替可否確認</label>
    <type>TextArea</type>
</CustomField>