force-app/main/default/objects/DefaultFeedTemplate__c/fields/ConfirmationRequest__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationRequest__c</fullName>
    <label>解約精算_確認依頼</label>
    <type>TextArea</type>
</CustomField>