force-app/main/default/objects/DefaultFeedTemplate__c/fields/ConfirmationScrutinyProgress__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationScrutinyProgress__c</fullName>
    <label>新規_精査進捗確認</label>
    <type>TextArea</type>
</CustomField>