force-app/main/default/objects/DefaultFeedTemplate__c/fields/ConfirmDocumentReminder__c.field-meta.xml
<CustomField>
    <fullName>ConfirmDocumentReminder__c</fullName>
    <label>新規_ご確認書督促</label>
    <type>TextArea</type>
</CustomField>