force-app/main/default/objects/DefaultFeedTemplate__c/fields/ContactAccountGarageCertification__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountGarageCertification__c</fullName>
    <description>SNT決裁後に企業に連絡する</description>
    <label>車庫証明_企業に連絡</label>
    <length>255</length>
    <type>Text</type>
</CustomField>