force-app/main/default/objects/DefaultFeedTemplate__c/fields/ContactAccountNewMatter__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountNewMatter__c</fullName>
    <label>新規_企業に連絡(新規業務)</label>
    <type>TextArea</type>
</CustomField>