force-app/main/default/objects/DefaultFeedTemplate__c/fields/ContactAccountRenewal__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountRenewal__c</fullName>
    <label>更新 企業に連絡</label>
    <type>TextArea</type>
</CustomField>