force-app/main/default/objects/DefaultFeedTemplate__c/fields/ContactEmployee__c.field-meta.xml
<CustomField>
    <fullName>ContactEmployee__c</fullName>
    <label>解約精算_社員へ連絡</label>
    <type>TextArea</type>
</CustomField>