force-app/main/default/objects/DefaultFeedTemplate__c/fields/ContractorChangeApplication__c.field-meta.xml
<CustomField>
    <fullName>ContractorChangeApplication__c</fullName>
    <label>名義変更_名変申入れ</label>
    <type>TextArea</type>
</CustomField>