force-app/main/default/objects/DefaultFeedTemplate__c/fields/CorrespondenceDiscussions__c.field-meta.xml
<CustomField>
    <fullName>CorrespondenceDiscussions__c</fullName>
    <label>入替(退去)_今後の対応を協議</label>
    <type>TextArea</type>
</CustomField>