force-app/main/default/objects/DefaultFeedTemplate__c/fields/DecisionApplicationConditionChange__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplicationConditionChange__c</fullName>
    <label>条件変更_決裁申請</label>
    <type>TextArea</type>
</CustomField>