force-app/main/default/objects/DefaultFeedTemplate__c/fields/DecisionContactToAgency__c.field-meta.xml
<CustomField>
    <fullName>DecisionContactToAgency__c</fullName>
    <label>新規_決定連絡（不動産向け）</label>
    <type>TextArea</type>
</CustomField>