force-app/main/default/objects/DefaultFeedTemplate__c/fields/DecisionContactToEmployee__c.field-meta.xml
<CustomField>
    <fullName>DecisionContactToEmployee__c</fullName>
    <label>新規_決定連絡（企業社員向け）</label>
    <type>TextArea</type>
</CustomField>