force-app/main/default/objects/DefaultFeedTemplate__c/fields/EmployeeExplainChange__c.field-meta.xml
<CustomField>
    <fullName>EmployeeExplainChange__c</fullName>
    <label>更新 社員説明</label>
    <type>TextArea</type>
</CustomField>