force-app/main/default/objects/DefaultFeedTemplate__c/fields/EstimateReminder__c.field-meta.xml
<CustomField>
    <fullName>EstimateReminder__c</fullName>
    <label>解約精算_見積督促</label>
    <type>TextArea</type>
</CustomField>