force-app/main/default/objects/DefaultFeedTemplate__c/fields/FirstStorageDocumentReminderNewMatter__c.field-meta.xml
<CustomField>
    <fullName>FirstStorageDocumentReminderNewMatter__c</fullName>
    <label>新規_初回保管書類督促（新規）</label>
    <type>TextArea</type>
</CustomField>