force-app/main/default/objects/DefaultFeedTemplate__c/fields/InvoiceReceipt__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReceipt__c</fullName>
    <label>解約精算_請求書受領済み</label>
    <type>TextArea</type>
</CustomField>