force-app/main/default/objects/DefaultFeedTemplate__c/fields/LeaveBillCreateRequest__c.field-meta.xml
<CustomField>
    <fullName>LeaveBillCreateRequest__c</fullName>
    <label>入替(退去)_請求書作成依頼</label>
    <type>TextArea</type>
</CustomField>