force-app/main/default/objects/DefaultFeedTemplate__c/fields/LeaveConfirmRequest__c.field-meta.xml
<CustomField>
    <fullName>LeaveConfirmRequest__c</fullName>
    <label>入替(退去)_確認依頼</label>
    <type>TextArea</type>
</CustomField>