force-app/main/default/objects/DefaultFeedTemplate__c/fields/LeaveDateChangeCompletedNotice__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateChangeCompletedNotice__c</fullName>
    <label>解約申入 退去日変更完了通知</label>
    <type>TextArea</type>
</CustomField>