force-app/main/default/objects/DefaultFeedTemplate__c/fields/LeaveEstimateReminder__c.field-meta.xml
<CustomField>
    <fullName>LeaveEstimateReminder__c</fullName>
    <label>入替(退去)_見積督促</label>
    <type>TextArea</type>
</CustomField>