force-app/main/default/objects/DefaultFeedTemplate__c/fields/LegalApplicationApprovalContactCondition__c.field-meta.xml
<CustomField>
    <fullName>LegalApplicationApprovalContactCondition__c</fullName>
    <label>条件変更_リーガル申請_承認後連絡</label>
    <type>TextArea</type>
</CustomField>