force-app/main/default/objects/DefaultFeedTemplate__c/fields/LegalApplicationApprovalContactNewMatter__c.field-meta.xml
<CustomField>
    <fullName>LegalApplicationApprovalContactNewMatter__c</fullName>
    <label>新規_リーガル申請_承認後連絡(新規)</label>
    <type>TextArea</type>
</CustomField>