force-app/main/default/objects/DefaultFeedTemplate__c/fields/MediationRequestSend__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestSend__c</fullName>
    <label>斡旋_斡旋依頼送付</label>
    <type>TextArea</type>
</CustomField>