force-app/main/default/objects/DefaultFeedTemplate__c/fields/MoveBillCreateRequest__c.field-meta.xml
<CustomField>
    <fullName>MoveBillCreateRequest__c</fullName>
    <label>入替(入居)_請求書作成依頼</label>
    <type>TextArea</type>
</CustomField>