force-app/main/default/objects/DefaultFeedTemplate__c/fields/MoveConfirmRequest__c.field-meta.xml
<CustomField>
    <fullName>MoveConfirmRequest__c</fullName>
    <label>入替(入居)_確認依頼</label>
    <type>TextArea</type>
</CustomField>