force-app/main/default/objects/DefaultFeedTemplate__c/fields/NotificationChangeCondition__c.field-meta.xml
<CustomField>
    <fullName>NotificationChangeCondition__c</fullName>
    <label>条件変更_条件変更通知</label>
    <type>TextArea</type>
</CustomField>