force-app/main/default/objects/DefaultFeedTemplate__c/fields/OnHoldCansellationDecisionApproval__c.field-meta.xml
<CustomField>
    <fullName>OnHoldCansellationDecisionApproval__c</fullName>
    <label>解約申入 保留解除決裁承認</label>
    <type>TextArea</type>
</CustomField>