force-app/main/default/objects/DefaultFeedTemplate__c/fields/OtherDecisionContact__c.field-meta.xml
<CustomField>
    <fullName>OtherDecisionContact__c</fullName>
    <label>新規_他決連絡</label>
    <type>TextArea</type>
</CustomField>