force-app/main/default/objects/DefaultFeedTemplate__c/fields/PersonalExpenseContact__c.field-meta.xml
<CustomField>
    <fullName>PersonalExpenseContact__c</fullName>
    <label>解約精算_個人負担連絡</label>
    <type>TextArea</type>
</CustomField>