force-app/main/default/objects/DefaultFeedTemplate__c/fields/ProblemContentAdjustment__c.field-meta.xml
<CustomField>
    <fullName>ProblemContentAdjustment__c</fullName>
    <label>解約申入 問題内容の調整</label>
    <type>TextArea</type>
</CustomField>