force-app/main/default/objects/DefaultFeedTemplate__c/fields/RetireeListReminder__c.field-meta.xml
<CustomField>
    <fullName>RetireeListReminder__c</fullName>
    <label>解約申入 退職者リスト督促</label>
    <type>TextArea</type>
</CustomField>