force-app/main/default/objects/DefaultFeedTemplate__c/fields/SendApplicationForm__c.field-meta.xml
<CustomField>
    <fullName>SendApplicationForm__c</fullName>
    <label>新規_入居申込書送付</label>
    <type>TextArea</type>
</CustomField>