force-app/main/default/objects/DefaultFeedTemplate__c/fields/SendCheckListMoveOut__c.field-meta.xml
<CustomField>
    <fullName>SendCheckListMoveOut__c</fullName>
    <label>解約精算_退去時チェックリスト送付</label>
    <type>TextArea</type>
</CustomField>