force-app/main/default/objects/DefaultFeedTemplate__c/fields/SendFireInsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>SendFireInsurancePolicy__c</fullName>
    <label>斡旋_火災保険証券送付</label>
    <type>TextArea</type>
</CustomField>