force-app/main/default/objects/DefaultFeedTemplate__c/fields/SendLegalApplication__c.field-meta.xml
<CustomField>
    <fullName>SendLegalApplication__c</fullName>
    <label>新規_リーガル申請送付</label>
    <type>TextArea</type>
</CustomField>