force-app/main/default/objects/DefaultFeedTemplate__c/fields/SendSecurityDepositDetails__c.field-meta.xml
<CustomField>
    <fullName>SendSecurityDepositDetails__c</fullName>
    <label>解約精算_敷金明細送付</label>
    <type>TextArea</type>
</CustomField>